confirm controller added
