# swagger_api/api/swagger/swagger.yaml
@@ -2,8 +2,7 @@ swagger: "2.0"
 info:
   version: "0.0.1"
   title: Blockchain Insurance Api
-# during dev, should point to your local machine
-host: localhost:8081
+
 # basePath prefixes all resource paths 
 basePath: /
 # 
@@ -265,6 +264,8 @@ definitions:
         type: string
   requestInsuranceRequest:
     properties:
+      yourAddress:
+        type: string
       eqcontract:
         type: string
       strength:
@@ -277,7 +278,9 @@ definitions:
         type: number
   confirmRequest:
    properties:
-      address:
+      yourAddress:
+        type: string
+      eqcontract:
         type: string
       ether:
         type: number
